v1.2.0.1:	Added SkipSplash plugin.
		Fixed UseTime (autoreuse) command bug.
		Fixed Respawn plugin.
		Fixed GodMode plugin.
		Changed Teleport plugin to use friendly teleport method.
v1.2.0.0:	Updated for Terraria 1.3.0.5.
		Added IPluginChatCommand.
		Added command functionality to ItemSpawner, NPC, Time, and UseTime plugins.
		Various bug fixes.
v1.1.0.12:	Changed UseTime to use [UseTime] category in Plugins.ini.
		Added Actuators to UseTime plugin.
		Added many warnings to patcher.
		Added dialog to copy plugins over to Terraria folder after done patching.
v1.1.0.11:	Added GodMode plugin.
		Added InfiniteFlight.
		Moved Coin Gun to a plugin.
		Moved Max Tile Speed, Max Wall Speed, Max Pick Speed, Max Reach Range and Max Item Pickup Range to UseTime plugin.
		Updated UseTime plugin to work for Wrench, Green Wrench, Blue Wrench, and Wire Cutter.
		Fixed HomingBullets plugin for when you have Pygmy or Twin minions.
		Fixed NPC plugin, specifically spawn rate modification.
		Fixed BuffRates plugin, specifically rage.
		Various performance improvements.
v1.1.0.10:	Fixed another plugin hotkey bug.
v1.1.0.9:	Added thread link & update warning on main UI of patcher.
		Fixed plugin hotkey bug.
v1.1.0.8:	Fixed ItemSpawner to spawn items on yourself instead of player 1.
		Fixed MoreAccessorySlots plugin.
		Fixed Weather plugin.
		Moved spawn rate/limit to NPC plugin and allows dynamic adjustment of the values.
		Added endurance buff and ice barrier (from Frozen Turtle Shell) to BuffRates plugin.
		Added Minions plugin.
		Added Respawn plugin.
v1.1.0.7:	Converted Item Replication to a plugin.
		Updated IPluginPlayerUpdate signature.
		Added IPluginUpdate.
v1.1.0.6:	Added MoreAccessorySlots plugin.
		Added ItemSpawner plugin.
		Updated plugin hotkeys to only work when chat/chest edit/sign edit windows are closed.
		Updated Events plugin Moon Lord to use separate hotkey instead of CTRL modifier so that ItemSpawner doesn't conflict.
		Fixed bugs in HomingBullets plugin.